# DiscoverLocalActivities

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION_EN.docx  TECHNICAL_DOCUMENTATION_EN.md  TECHNICAL_DOCUMENTATION_MK.md  TODO.txt  Team 4 - Task Completion Report.docx  UNREK.md  URNEK.md  compose.yaml  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: app.py  db.py  main.py  models.py  pyproject.toml  schemas.py
app/helper/: calculate_haversine.py  constants.py  filter_nearby_activities.py  recomendation.py  recommendation_handler.py
app/routers/: activities.py  activities_backup.py  recommendations.py  users.py  working_hours.py
data/: activities.csv  cleaned_activities.csv  dummy_users.csv  unique_activities copy.tsv  working_hours.csv
data/input/: uniques_activities_2.tsv
data/output/: cleaned_activities.csv  working_hours.csv
docs/: TECHNICAL_DOCUMENTATION_MK.docx  tasksDone.txt  week4-presentation.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  NotFoundPage.tsx  index.css  main.tsx
frontend/src/components/: ActivitiesPanel.tsx  MapPanel.tsx  RecommendationCards.tsx  RecommendationFilters.tsx  RecommendationsPanel.tsx  UsersPanel.tsx  mapTypes.ts
frontend/src/tests/: Cards.tsx  FetchData.tsx  InfiniteScroll.tsx
scripts/: clean_activities.py  export_dummy_users_csv.py  generate_dummy_users.py  preprocess_activities_tsv.py  preprocess_working_hours.py  seed_activity_table.py
tests/: test_health.py  test_recommendation_handler.py  test_recommendations.py  test_working_hours_post.py
(+7 files in other folders)
