[project]
name = "Discoverlocalactivities_Project"
version = "0.1.0"
description = "A project to discover local activities using FastAPI and PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.27.0",
]
